--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cardápio-Açai-Total</title>
+    <title>acaitotal@gmail.com (31) 99335-5555</title>
     <link href="finalização.css" rel="stylesheet">
 </head>
 <body>
